[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deblurrinator"
version = "0.1.0"
description = "Blind deblurring of barcodes via Kullback-Leibler divergence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "pyzbar",
    "qrcode",
    "opencv-python",
]

[project.optional-dependencies]
demo = [
    "matplotlib",
]

[tool.setuptools]
packages = ["deblurrinator"]
